// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SampleData /> spec No sample detectors created renders component 1`] = `
<div>
  <div
    class="euiPageHeader euiPageHeader--responsive"
  >
    <h1
      class="euiTitle euiTitle--large"
    >
      Sample detectors
    </h1>
  </div>
  <div
    class="euiText euiText--medium"
  >
    Create a detector with streaming sample data to get a deeper understanding of how anomaly detection works. You can create and initialize a detector with configured settings for your selected sample index.
  </div>
  <div
    class="euiSpacer euiSpacer--xl"
  />
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <div
        style="height: auto;"
      >
        <div
          class="euiPanel euiPanel--paddingMedium"
          style="padding: 20px;"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
            style="padding: 0px;"
          >
            <div
              class="euiFlexItem"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem"
                >
                  <div
                    style="display: flex; flex-direction: row; align-content: flexStart;"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--large euiIcon-isLoading"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                    <h2
                      class="euiTitle euiTitle--small"
                      style="margin-left: 12px; margin-top: -3px;"
                    >
                      Monitor HTTP responses
                    </h2>
                    <button
                      class="euiLink euiLink--primary"
                      style="margin-left: 12px;"
                      type="button"
                    >
                      Info
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem"
                />
              </div>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem"
                />
              </div>
            </div>
          </div>
          <hr
            class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginXSmall"
          />
          <div
            style="padding: 10px 0px;"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionColumn euiFlexGroup--responsive"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
                style="height: 70px;"
              >
                <p
                  style="text-align: left; line-height: 1.4; max-height: 4.2px;"
                >
                  Detect high numbers of error response codes in an index containing HTTP response data.
                </p>
              </div>
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionColumn euiFlexGroup--responsive"
                style="height: 100px; margin-top: 0px; margin-bottom: 0px;"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <button
                    class="euiButton euiButton--primary"
                    data-test-subj="loadDataButton"
                    style="width: 300px;"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButton__content"
                    >
                      <span
                        class="euiButton__text"
                      >
                        Create HTTP response detector
                      </span>
                    </span>
                  </button>
                </div>
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiFlexItem"
    >
      <div
        style="height: auto;"
      >
        <div
          class="euiPanel euiPanel--paddingMedium"
          style="padding: 20px;"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
            style="padding: 0px;"
          >
            <div
              class="euiFlexItem"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem"
                >
                  <div
                    style="display: flex; flex-direction: row; align-content: flexStart;"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--large euiIcon-isLoading"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                    <h2
                      class="euiTitle euiTitle--small"
                      style="margin-left: 12px; margin-top: -3px;"
                    >
                      Monitor eCommerce orders
                    </h2>
                    <button
                      class="euiLink euiLink--primary"
                      style="margin-left: 12px;"
                      type="button"
                    >
                      Info
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem"
                />
              </div>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem"
                />
              </div>
            </div>
          </div>
          <hr
            class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginXSmall"
          />
          <div
            style="padding: 10px 0px;"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionColumn euiFlexGroup--responsive"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
                style="height: 70px;"
              >
                <p
                  style="text-align: left; line-height: 1.4; max-height: 4.2px;"
                >
                  Detect any unusual increase or decrease of orders in an index containing online order data.
                </p>
              </div>
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionColumn euiFlexGroup--responsive"
                style="height: 100px; margin-top: 0px; margin-bottom: 0px;"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <button
                    class="euiButton euiButton--primary"
                    data-test-subj="loadDataButton"
                    style="width: 300px;"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButton__content"
                    >
                      <span
                        class="euiButton__text"
                      >
                        Create eCommerce orders detector
                      </span>
                    </span>
                  </button>
                </div>
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiFlexItem"
    >
      <div
        style="height: auto;"
      >
        <div
          class="euiPanel euiPanel--paddingMedium"
          style="padding: 20px;"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
            style="padding: 0px;"
          >
            <div
              class="euiFlexItem"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem"
                >
                  <div
                    style="display: flex; flex-direction: row; align-content: flexStart;"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--large euiIcon-isLoading"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                    <h2
                      class="euiTitle euiTitle--small"
                      style="margin-left: 12px; margin-top: -3px;"
                    >
                      Monitor host health
                    </h2>
                    <button
                      class="euiLink euiLink--primary"
                      style="margin-left: 12px;"
                      type="button"
                    >
                      Info
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem"
                />
              </div>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem"
                />
              </div>
            </div>
          </div>
          <hr
            class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginXSmall"
          />
          <div
            style="padding: 10px 0px;"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionColumn euiFlexGroup--responsive"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
                style="height: 70px;"
              >
                <p
                  style="text-align: left; line-height: 1.4; max-height: 4.2px;"
                >
                  Detect increases in CPU and memory utilization in an index containing various health metrics from a host.
                </p>
              </div>
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionColumn euiFlexGroup--responsive"
                style="height: 100px; margin-top: 0px; margin-bottom: 0px;"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <button
                    class="euiButton euiButton--primary"
                    data-test-subj="loadDataButton"
                    style="width: 300px;"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButton__content"
                    >
                      <span
                        class="euiButton__text"
                      >
                        Create health monitor detector
                      </span>
                    </span>
                  </button>
                </div>
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiSpacer euiSpacer--m"
    />
  </div>
   
</div>
`;

exports[`<SampleData /> spec Some detectors created renders component with non-sample detector 1`] = `
<div>
  <div
    class="euiPageHeader euiPageHeader--responsive"
  >
    <h1
      class="euiTitle euiTitle--large"
    >
      Sample detectors
    </h1>
  </div>
  <div
    class="euiText euiText--medium"
  >
    Create a detector with streaming sample data to get a deeper understanding of how anomaly detection works. You can create and initialize a detector with configured settings for your selected sample index.
  </div>
  <div
    class="euiSpacer euiSpacer--xl"
  />
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <div
        style="height: auto;"
      >
        <div
          class="euiPanel euiPanel--paddingMedium"
          style="padding: 20px;"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
            style="padding: 0px;"
          >
            <div
              class="euiFlexItem"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem"
                >
                  <div
                    style="display: flex; flex-direction: row; align-content: flexStart;"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--large"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12.654 3.48c.248.225.552.389.888.467L11.24 9.43a1.99 1.99 0 00-.915-.404l2.33-5.547zM9.146 9.19a2.008 2.008 0 00-.769.64l-1.572-2c.311-.136.581-.35.785-.618l1.556 1.978zM5.581 7.956l-2.134 4.268a.5.5 0 01-.894-.448l2.134-4.268c.25.22.557.376.894.448zM1 15h13.5a.5.5 0 110 1H.5a.5.5 0 01-.5-.5v-14a.5.5 0 011 0V15zm5-8a1 1 0 110-2 1 1 0 010 2zm4 5a1 1 0 110-2 1 1 0 010 2zm4-9a1 1 0 110-2 1 1 0 010 2z"
                      />
                    </svg>
                    <h2
                      class="euiTitle euiTitle--small"
                      style="margin-left: 12px; margin-top: -3px;"
                    >
                      Monitor HTTP responses
                    </h2>
                    <button
                      class="euiLink euiLink--primary"
                      style="margin-left: 12px;"
                      type="button"
                    >
                      Info
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem"
                />
              </div>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem"
                />
              </div>
            </div>
          </div>
          <hr
            class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginXSmall"
          />
          <div
            style="padding: 10px 0px;"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionColumn euiFlexGroup--responsive"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
                style="height: 70px;"
              >
                <p
                  style="text-align: left; line-height: 1.4; max-height: 4.2px;"
                >
                  Detect high numbers of error response codes in an index containing HTTP response data.
                </p>
              </div>
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionColumn euiFlexGroup--responsive"
                style="height: 100px; margin-top: 0px; margin-bottom: 0px;"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <button
                    class="euiButton euiButton--primary"
                    data-test-subj="loadDataButton"
                    style="width: 300px;"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButton__content"
                    >
                      <span
                        class="euiButton__text"
                      >
                        Create HTTP response detector
                      </span>
                    </span>
                  </button>
                </div>
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiFlexItem"
    >
      <div
        style="height: auto;"
      >
        <div
          class="euiPanel euiPanel--paddingMedium"
          style="padding: 20px;"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
            style="padding: 0px;"
          >
            <div
              class="euiFlexItem"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem"
                >
                  <div
                    style="display: flex; flex-direction: row; align-content: flexStart;"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--large"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M14.447 3.724l-6-3a1 1 0 00-.894 0l-6 3A1 1 0 001 4.618v6.764a1 1 0 00.553.894l6 3a1 1 0 00.894 0l6-3a1 1 0 00.553-.894V4.618a1 1 0 00-.553-.894zM5.871 5.897l5.343-2.672 2.158 1.079L8 6.943zM8 1.618l2.096 1.048-5.353 2.677-2.115-1.039zM2 5.11l2.25 1.105V9a.5.5 0 001 0V6.706L7.5 7.811v6.321L2 11.382zm6.5 9.022v-6.32L14 5.11v6.272z"
                      />
                    </svg>
                    <h2
                      class="euiTitle euiTitle--small"
                      style="margin-left: 12px; margin-top: -3px;"
                    >
                      Monitor eCommerce orders
                    </h2>
                    <button
                      class="euiLink euiLink--primary"
                      style="margin-left: 12px;"
                      type="button"
                    >
                      Info
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem"
                />
              </div>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem"
                />
              </div>
            </div>
          </div>
          <hr
            class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginXSmall"
          />
          <div
            style="padding: 10px 0px;"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionColumn euiFlexGroup--responsive"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
                style="height: 70px;"
              >
                <p
                  style="text-align: left; line-height: 1.4; max-height: 4.2px;"
                >
                  Detect any unusual increase or decrease of orders in an index containing online order data.
                </p>
              </div>
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionColumn euiFlexGroup--responsive"
                style="height: 100px; margin-top: 0px; margin-bottom: 0px;"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <button
                    class="euiButton euiButton--primary"
                    data-test-subj="loadDataButton"
                    style="width: 300px;"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButton__content"
                    >
                      <span
                        class="euiButton__text"
                      >
                        Create eCommerce orders detector
                      </span>
                    </span>
                  </button>
                </div>
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiFlexItem"
    >
      <div
        style="height: auto;"
      >
        <div
          class="euiPanel euiPanel--paddingMedium"
          style="padding: 20px;"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
            style="padding: 0px;"
          >
            <div
              class="euiFlexItem"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem"
                >
                  <div
                    style="display: flex; flex-direction: row; align-content: flexStart;"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--large"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12.877 5.847l-1.02 1.02a.5.5 0 01-.708-.707l1.1-1.099c-.05-.053-.1-.106-.152-.157A6.471 6.471 0 008 3.019V4.5a.5.5 0 01-1 0V3.019a6.47 6.47 0 00-4.261 2.055l1.07 1.071a.5.5 0 01-.706.707l-.99-.99A6.46 6.46 0 001.018 10H2.5a.5.5 0 110 1H1.174c.083.353.196.697.337 1.03a.5.5 0 11-.922.39A7.487 7.487 0 010 9.5a7.483 7.483 0 012.197-5.304A7.487 7.487 0 017.5 2a7.487 7.487 0 015.304 2.197A7.483 7.483 0 0115 9.5a7.487 7.487 0 01-.59 2.92.5.5 0 01-.92-.39c.14-.333.253-.677.336-1.03H12.5a.5.5 0 110-1h1.481a6.483 6.483 0 00-1.104-4.153zm-6.041 5.317a.993.993 0 01-.01-1.404c.384-.385 2.882-2.002 3.149-1.735.267.267-1.35 2.765-1.735 3.15a.993.993 0 01-1.404-.01z"
                      />
                    </svg>
                    <h2
                      class="euiTitle euiTitle--small"
                      style="margin-left: 12px; margin-top: -3px;"
                    >
                      Monitor host health
                    </h2>
                    <button
                      class="euiLink euiLink--primary"
                      style="margin-left: 12px;"
                      type="button"
                    >
                      Info
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem"
                />
              </div>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem"
                />
              </div>
            </div>
          </div>
          <hr
            class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginXSmall"
          />
          <div
            style="padding: 10px 0px;"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionColumn euiFlexGroup--responsive"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
                style="height: 70px;"
              >
                <p
                  style="text-align: left; line-height: 1.4; max-height: 4.2px;"
                >
                  Detect increases in CPU and memory utilization in an index containing various health metrics from a host.
                </p>
              </div>
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionColumn euiFlexGroup--responsive"
                style="height: 100px; margin-top: 0px; margin-bottom: 0px;"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <button
                    class="euiButton euiButton--primary"
                    data-test-subj="loadDataButton"
                    style="width: 300px;"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButton__content"
                    >
                      <span
                        class="euiButton__text"
                      >
                        Create health monitor detector
                      </span>
                    </span>
                  </button>
                </div>
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiSpacer euiSpacer--m"
    />
  </div>
   
</div>
`;

exports[`<SampleData /> spec Some detectors created renders component with sample detector 1`] = `
<div>
  <div
    class="euiPageHeader euiPageHeader--responsive"
  >
    <h1
      class="euiTitle euiTitle--large"
    >
      Sample detectors
    </h1>
  </div>
  <div
    class="euiText euiText--medium"
  >
    Create a detector with streaming sample data to get a deeper understanding of how anomaly detection works. You can create and initialize a detector with configured settings for your selected sample index.
  </div>
  <div
    class="euiSpacer euiSpacer--xl"
  />
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <div
        style="height: auto;"
      >
        <div
          class="euiPanel euiPanel--paddingMedium euiPanel--hasBetaBadge"
          style="padding: 20px;"
        >
          <span
            class="euiPanel__betaBadgeWrapper"
          >
            <span
              class="euiBetaBadge euiPanel__betaBadge"
              title="INSTALLED"
            >
              INSTALLED
            </span>
          </span>
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
            style="padding: 0px;"
          >
            <div
              class="euiFlexItem"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem"
                >
                  <div
                    style="display: flex; flex-direction: row; align-content: flexStart;"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--large"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12.654 3.48c.248.225.552.389.888.467L11.24 9.43a1.99 1.99 0 00-.915-.404l2.33-5.547zM9.146 9.19a2.008 2.008 0 00-.769.64l-1.572-2c.311-.136.581-.35.785-.618l1.556 1.978zM5.581 7.956l-2.134 4.268a.5.5 0 01-.894-.448l2.134-4.268c.25.22.557.376.894.448zM1 15h13.5a.5.5 0 110 1H.5a.5.5 0 01-.5-.5v-14a.5.5 0 011 0V15zm5-8a1 1 0 110-2 1 1 0 010 2zm4 5a1 1 0 110-2 1 1 0 010 2zm4-9a1 1 0 110-2 1 1 0 010 2z"
                      />
                    </svg>
                    <h2
                      class="euiTitle euiTitle--small"
                      style="margin-left: 12px; margin-top: -3px;"
                    >
                      Monitor HTTP responses
                    </h2>
                    <button
                      class="euiLink euiLink--primary"
                      style="margin-left: 12px;"
                      type="button"
                    >
                      Info
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem"
                />
              </div>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem"
                />
              </div>
            </div>
          </div>
          <hr
            class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginXSmall"
          />
          <div
            style="padding: 10px 0px;"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionColumn euiFlexGroup--responsive"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
                style="height: 70px;"
              >
                <p
                  style="text-align: left; line-height: 1.4; max-height: 4.2px;"
                >
                  Detect high numbers of error response codes in an index containing HTTP response data.
                </p>
              </div>
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionColumn euiFlexGroup--responsive"
                style="height: 100px; margin-top: 0px; margin-bottom: 0px;"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <button
                    class="euiButton euiButton--primary euiButton-isDisabled"
                    data-test-subj="loadDataButton"
                    disabled=""
                    style="width: 300px;"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButton__content"
                    >
                      <span
                        class="euiButton__text"
                      >
                        Detector created
                      </span>
                    </span>
                  </button>
                </div>
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <a
                    class="euiLink euiLink--primary"
                    href="opendistro-anomaly-detection-kibana#/detectors/sample-detector-id"
                    rel="noreferrer"
                  >
                    View detector and sample data
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiFlexItem"
    >
      <div
        style="height: auto;"
      >
        <div
          class="euiPanel euiPanel--paddingMedium"
          style="padding: 20px;"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
            style="padding: 0px;"
          >
            <div
              class="euiFlexItem"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem"
                >
                  <div
                    style="display: flex; flex-direction: row; align-content: flexStart;"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--large"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M14.447 3.724l-6-3a1 1 0 00-.894 0l-6 3A1 1 0 001 4.618v6.764a1 1 0 00.553.894l6 3a1 1 0 00.894 0l6-3a1 1 0 00.553-.894V4.618a1 1 0 00-.553-.894zM5.871 5.897l5.343-2.672 2.158 1.079L8 6.943zM8 1.618l2.096 1.048-5.353 2.677-2.115-1.039zM2 5.11l2.25 1.105V9a.5.5 0 001 0V6.706L7.5 7.811v6.321L2 11.382zm6.5 9.022v-6.32L14 5.11v6.272z"
                      />
                    </svg>
                    <h2
                      class="euiTitle euiTitle--small"
                      style="margin-left: 12px; margin-top: -3px;"
                    >
                      Monitor eCommerce orders
                    </h2>
                    <button
                      class="euiLink euiLink--primary"
                      style="margin-left: 12px;"
                      type="button"
                    >
                      Info
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem"
                />
              </div>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem"
                />
              </div>
            </div>
          </div>
          <hr
            class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginXSmall"
          />
          <div
            style="padding: 10px 0px;"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionColumn euiFlexGroup--responsive"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
                style="height: 70px;"
              >
                <p
                  style="text-align: left; line-height: 1.4; max-height: 4.2px;"
                >
                  Detect any unusual increase or decrease of orders in an index containing online order data.
                </p>
              </div>
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionColumn euiFlexGroup--responsive"
                style="height: 100px; margin-top: 0px; margin-bottom: 0px;"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <button
                    class="euiButton euiButton--primary"
                    data-test-subj="loadDataButton"
                    style="width: 300px;"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButton__content"
                    >
                      <span
                        class="euiButton__text"
                      >
                        Create eCommerce orders detector
                      </span>
                    </span>
                  </button>
                </div>
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiFlexItem"
    >
      <div
        style="height: auto;"
      >
        <div
          class="euiPanel euiPanel--paddingMedium"
          style="padding: 20px;"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
            style="padding: 0px;"
          >
            <div
              class="euiFlexItem"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem"
                >
                  <div
                    style="display: flex; flex-direction: row; align-content: flexStart;"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--large"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12.877 5.847l-1.02 1.02a.5.5 0 01-.708-.707l1.1-1.099c-.05-.053-.1-.106-.152-.157A6.471 6.471 0 008 3.019V4.5a.5.5 0 01-1 0V3.019a6.47 6.47 0 00-4.261 2.055l1.07 1.071a.5.5 0 01-.706.707l-.99-.99A6.46 6.46 0 001.018 10H2.5a.5.5 0 110 1H1.174c.083.353.196.697.337 1.03a.5.5 0 11-.922.39A7.487 7.487 0 010 9.5a7.483 7.483 0 012.197-5.304A7.487 7.487 0 017.5 2a7.487 7.487 0 015.304 2.197A7.483 7.483 0 0115 9.5a7.487 7.487 0 01-.59 2.92.5.5 0 01-.92-.39c.14-.333.253-.677.336-1.03H12.5a.5.5 0 110-1h1.481a6.483 6.483 0 00-1.104-4.153zm-6.041 5.317a.993.993 0 01-.01-1.404c.384-.385 2.882-2.002 3.149-1.735.267.267-1.35 2.765-1.735 3.15a.993.993 0 01-1.404-.01z"
                      />
                    </svg>
                    <h2
                      class="euiTitle euiTitle--small"
                      style="margin-left: 12px; margin-top: -3px;"
                    >
                      Monitor host health
                    </h2>
                    <button
                      class="euiLink euiLink--primary"
                      style="margin-left: 12px;"
                      type="button"
                    >
                      Info
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem"
                />
              </div>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem"
                />
              </div>
            </div>
          </div>
          <hr
            class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginXSmall"
          />
          <div
            style="padding: 10px 0px;"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionColumn euiFlexGroup--responsive"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
                style="height: 70px;"
              >
                <p
                  style="text-align: left; line-height: 1.4; max-height: 4.2px;"
                >
                  Detect increases in CPU and memory utilization in an index containing various health metrics from a host.
                </p>
              </div>
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionColumn euiFlexGroup--responsive"
                style="height: 100px; margin-top: 0px; margin-bottom: 0px;"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <button
                    class="euiButton euiButton--primary"
                    data-test-subj="loadDataButton"
                    style="width: 300px;"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButton__content"
                    >
                      <span
                        class="euiButton__text"
                      >
                        Create health monitor detector
                      </span>
                    </span>
                  </button>
                </div>
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiSpacer euiSpacer--m"
    />
  </div>
   
</div>
`;
